--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
     "angular": "^1.5.8",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-base64": "latest",
+    "angular-base64-upload": "latest"
   }
 }
